cabal-version:      2.4
name:               l-system
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Martin Ruderer
maintainer:         martin.ruderer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable l-system
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts -O2

    -- Modules included in this executable, other than Main.
    other-modules:
      Flows, Generate, LSystems

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        vector-space ^>=0.16,
        containers ^>=0.6.5.1,
        cairo ^>=0.13.8.1,
        colour ^>=2.3.6,
        MonadRandom ^>=0.5.3,
        hsnoise ^>= 0.0.2,
        mtl ^>= 2.2.2,
        hmatrix ^>=0.20.2,
        parallel ^>= 3.2.2.0,
        deepseq ^>= 1.4.4,
        deepseq-generics ^>=0.2.0.0,
        random-fu ^>=0.2.7.7

    hs-source-dirs:   app
    default-language: Haskell2010
